# service-filemanager

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: pr-tests.yml
app/: Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
app/database/migrations/: 0006_s3_relax_is_accessible.sql  0007_s3_version_id_index.sql  0008_s3_current_state_unique.sql  0009_s3_remove_unused_indexes.sql
app/database/v2/: 0001_object.sql  0002_historical_object.sql  0003_attributes.sql  0003_s3_event.sql  0004_checksum.sql  0005_s3_event.sql  0006_s3_metadata.sql  README.md  diagram.dbml
app/docs/: API_GUIDE.md  ATTRIBUTE_LINKING.md  MOVED_OBJECTS.md
app/filemanager/: Cargo.toml  README.md
app/filemanager-api-lambda/: Cargo.toml  README.md
app/filemanager-api-lambda/src/: main.rs
app/filemanager-api-server/: Cargo.toml  README.md
app/filemanager-api-server/src/: main.rs
app/filemanager-build/: Cargo.toml  README.md
app/filemanager-build/src/: error.rs  gen_entities.rs  gen_openapi.rs  main.rs
app/filemanager-ingest-lambda/: Cargo.toml  README.md
app/filemanager-ingest-lambda/src/: main.rs
app/filemanager-inventory-lambda/: Cargo.toml  README.md
app/filemanager-inventory-lambda/src/: main.rs
app/filemanager-migrate-lambda/: Cargo.toml
app/filemanager-migrate-lambda/src/: main.rs
app/filemanager/src/: env.rs  error.rs
app/filemanager/src/clients/aws/: config.rs  s3.rs  secrets_manager.rs
app/filemanager/src/database/: mod.rs
app/filemanager/src/database/aws/: credentials.rs  ingester.rs  ingester_paired.rs  migration.rs  query.rs
app/filemanager/src/database/entities/: README.md  mod.rs  prelude.rs  s3_crawl.rs  s3_object.rs  sea_orm_active_enums.rs
app/filemanager/src/events/: mod.rs
app/filemanager/src/events/aws/: collecter.rs  crawl.rs  inventory.rs  message.rs  mod.rs
app/filemanager/src/handlers/: aws.rs
app/filemanager/src/queries/: get.rs  list.rs  mod.rs  update.rs
app/filemanager/src/routes/: crawl.rs  get.rs  header.rs  ingest.rs  list.rs  mod.rs  openapi.rs  pagination.rs  presign.rs  update.rs
app/filemanager/src/routes/filter/: crawl.rs  wildcard.rs
app/filemanager/tests/inventory/: main.rs
crawl_prod_archive/: crawl_ops.sh  run_crawl.sh
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/operation/: API_GUIDE.md
docs/sop/: FM.1-AddIngestBucket.md
docs/v2/: REQUIREMENTS.md
infrastructure/: README.md
infrastructure/components/access-key-secret/: README.md  index.ts
infrastructure/components/event-dlq/: index.ts
infrastructure/components/event-source/: index.ts
infrastructure/components/monitored-queue/: index.ts
infrastructure/stage/: config.ts  constants.ts  filemanager-stateful-stack.ts  filemanager-stateless-stack.ts
infrastructure/toolchain/: stateful-stack.ts  stateless-stack.ts
test/: accessKeyUser.test.ts  eventDLQConstruct.test.ts  eventSourceConstruct.test.ts  monitored-queue.ts  providerFunction.test.ts  stage.test.ts  stateful-stack.test.ts  toolchain.test.ts  util.ts  utils.ts
test/integration/: event-rules.test.ts
test/integration-stateful/: event-rules.test.ts
test/stateful/: access-key-user.ts  stage.test.ts  stateful-stack.test.ts  toolchain.test.ts
test/stateless/: stage.test.ts  toolchain.test.ts
(+14 files in other folders)
