[package]
name = "filemanager-migrate-lambda"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1" }

aws_lambda_events = "1"
aws-sdk-cloudformation = "1"
lambda_runtime = "1"

filemanager = { path = "../filemanager", features = ["migrate"] }
